--- a/Media_pipe_pose_checkpoint - Copy.ipynb
+++ b/Media_pipe_pose_checkpoint - Copy.ipynb
@@ -9,46 +9,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: mediapipe in c:\\users\\jenil\\appdata\\roaming\\python\\python38\\site-packages (0.8.7.3)\n",
-      "Requirement already satisfied: opencv-python in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (4.5.3.56)\n",
-      "Requirement already satisfied: attrs>=19.1.0 in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (21.2.0)\n",
-      "Requirement already satisfied: wheel in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (0.37.0)\n",
-      "Requirement already satisfied: protobuf>=3.11.4 in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (3.17.3)\n",
-      "Requirement already satisfied: six in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (1.15.0)\n",
-      "Requirement already satisfied: opencv-contrib-python in c:\\users\\jenil\\appdata\\roaming\\python\\python38\\site-packages (from mediapipe) (4.5.3.56)\n",
-      "Requirement already satisfied: absl-py in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (0.13.0)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (3.4.3)\n",
-      "Requirement already satisfied: numpy in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (1.19.5)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (1.3.1)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (2.4.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (0.10.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (2.8.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (8.3.1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.3.1; however, version 23.0.1 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\jenil\\appdata\\local\\programs\\python\\python38\\python.exe -m pip install --upgrade pip' command.\n"
+      "Requirement already satisfied: mediapipe in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (0.9.2.1)\n",
+      "Requirement already satisfied: opencv-python in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (4.7.0.72)\n",
+      "Requirement already satisfied: opencv-contrib-python in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (4.7.0.72)\n",
+      "Requirement already satisfied: attrs>=19.1.0 in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (21.2.0)\n",
+      "Requirement already satisfied: absl-py in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (0.13.0)\n",
+      "Requirement already satisfied: flatbuffers>=2.0 in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (23.3.3)\n",
+      "Requirement already satisfied: numpy in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (1.23.4)\n",
+      "Requirement already satisfied: protobuf<4,>=3.11 in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (3.17.3)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from mediapipe) (3.4.3)\n",
+      "Requirement already satisfied: six>=1.9 in c:\\users\\jay munjapara\\appdata\\roaming\\python\\python38\\site-packages (from protobuf<4,>=3.11->mediapipe) (1.16.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (1.3.1)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\jay munjapara\\appdata\\roaming\\python\\python38\\site-packages (from matplotlib->mediapipe) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (0.10.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\jay munjapara\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->mediapipe) (8.3.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install mediapipe opencv-python"
+    "%pip install mediapipe opencv-python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
